Version [next]

[Feature] Support for hdtbl.
[Changed] Build extras and build preprocessors are now listed in a multi-select box.
[Improved] If no error has occurred, the log file will contain a success message.
[Improved] The default font looked gross on macOS. This should be better now.

-------------------------------

Version 0.12.0
2022-03-14

[Feature] If the installed version of troff is not detected as groff, a warning is displayed.
[Changed] On platforms which probably use a package manager (currently, Linux and BSDs), the "update check" checkbox is disabled and the related libraries are not referenced.
[Improved] When exiting groffstudio, the Save function from the "save" button is reused.
[Changed] Less capital letters.
[Improved] groffstudio opens on the primary screen now.

-------------------------------

Version 0.11.0
2022-03-12

[Feature] The update check was made optional (default: false).
[Changed] Rearranged the build options panel so it won't look as misaligned as it actually was.
[Changed] The required SSL libraries are shipped with the Windows package now.

-------------------------------

Version 0.10.1
2022-03-10

[Bugfix] When editing an unsaved document, the status panel will (correctly) display "[unsaved file]" now.
[Bugfix] Windows builds still had a seemingly broken update check. Fixed the status display.

-------------------------------

Version 0.10.0
2022-03-10

[Feature] Log file creation.
[Changed] Replaced the build output window by a status window.
[Bugfix] Windows builds erroneously showed "-1" in the update status field.
[Bugfix] Building a document without a macro package works now.

-------------------------------

Version 0.9.9.1
2022-03-10

[Feature] macOS builds are working now.
[Feature] First macOS release.

-------------------------------

Version 0.9.9.0
2022-02-24

[Feature] First working version.