@@ -23,6 +23,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MinorVersionNr Value="13"/>
+      <BuildNr Value="2"/>
       <Attributes pvaPreRelease="True"/>
       <StringTable ProductName="groffstudio"/>
     </VersionInfo>
@@ -88,6 +89,8 @@
       <IncludeFiles Value="$(ProjOutDir)"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Conditionals Value="if TargetOS = &apos;darwin&apos; then
+  LinkerOptions += &apos; -ld_classic -macosx_version_min&apos;;"/>
     <CodeGeneration>
       <Optimizations>
         <OptimizationLevel Value="4"/>
