@@ -4,6 +4,7 @@ Version [next]
 [Changed] Build extras and build preprocessors are now listed in a multi-select box.
 [Improved] If no error has occurred, the log file will contain a success message.
 [Improved] The default font looked gross on macOS. This should be better now.
+[Bugfix] Calling troff over the system default shell now, potentially finding more paths.
 
 -------------------------------
 
